variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: value ++ is not a member of Int
    x++;
     ^Variables:20: error: value -- is not a member of Int
    x--;
     ^